--- a/views/index.html
+++ b/views/index.html
@@ -5,14 +5,15 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 </head>
 
-<body>
-<div class="container">
-<h1>HOLLA</h1>
+<body ng-app='enertivDemo' ng-controller='MainCtrl'>
+    <div class="container">
+        <h1>HOLLA</h1> {{testing}}
+        <button class='btn' ng-click='testFunc()'>Test</button>
+    </div>
 
 
-</div>
+
 </body>
-
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
 <script src='modules/d3/d3.min.js' charset='utf-8'></script>
 <script src='modules/angular-resource/angular-resource.min.js'></script>
