--- a/views/index.html
+++ b/views/index.html
@@ -7,12 +7,22 @@
 
 <body ng-app='enertivDemo' ng-controller='MainCtrl'>
     <div class="container">
-        <h1>HOLLA</h1> {{testing}}
+        <h1>BOOM</h1>
         <button class='btn' ng-click='testFunc()'>Test</button>
+        <energy-graph></energy-graph>
+
+
+
+
+
+
+
+
+
+
+
+
     </div>
-
-
-
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
 <script src='modules/d3/d3.min.js' charset='utf-8'></script>
@@ -20,3 +30,4 @@
 <script src='javascripts/app.js'></script>
 <script src='javascripts/factories.js'></script>
 <script src='javascripts/controllers.js'></script>
+<script src='javascripts/directives.js'></script>
