--- a/views/index.html
+++ b/views/index.html
@@ -8,6 +8,7 @@
 <body ng-app='enertivDemo' ng-controller='MainCtrl'>
     <div class="container">
         <h1>BOOM</h1>
+        <button class="btn btn-warning" ng-click='testFunc()'>TEST</button>
 
         <energy-graph></energy-graph>
 
