--- a/public/templates/energyGraph.html
+++ b/public/templates/energyGraph.html
@@ -1,6 +1,6 @@
 <style>
 svg {
-  font: 10px sans-serif;
+  font: 12px sans-serif;
 }
 
 .line {
@@ -19,3 +19,4 @@ svg {
 </style>
 
 <div id='graphContainer'></div>
+<button class='btn btn-primary' ng-click='tick()'>Tick</button>
