--- a/views/index.html
+++ b/views/index.html
@@ -7,19 +7,33 @@
 
 <body ng-app='enertivDemo' ng-controller='MainCtrl'>
     <div class="container">
-        <h1>BOOM</h1>
+        <h1>BOOMSHAKALAKA</h1>
         <button class="btn btn-warning" ng-click='populate()'>Populate</button>
-
+        <button class="btn btn-danger" ng-click='testGet()'>Test</button>
         <energy-graph></energy-graph>
-
-
-
+        
+        <div class="row">
+        	<div class="col-lg-4 col-lg-offset-4">
+            <table class='table table-hover'>
+                <thead>
+                    <tr>
+                        <th class='text-left'>Time</th>
+                        <th class='text-center'>Consumption</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr ng-repeat="data in allData">
+                        <td class='text-left'>{{data.date}}</td>
+                        <td class='text-center'>{{data['NYC Office']}}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        </div>
+    
 
     </div>
 </body>
-
-
-
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
 <script src='modules/d3/d3.min.js' charset='utf-8'></script>
 <script src='modules/angular-resource/angular-resource.min.js'></script>
