--- a/views/index.html
+++ b/views/index.html
@@ -12,7 +12,7 @@
         <button class="btn btn-danger" ng-click='testGet()'>Test</button>
         <energy-graph></energy-graph>
         
-        <div class="row">
+        <!-- <div class="row">
         	<div class="col-lg-4 col-lg-offset-4">
             <table class='table table-hover'>
                 <thead>
@@ -29,7 +29,7 @@
                 </tbody>
             </table>
         </div>
-        </div>
+        </div> -->
     
 
     </div>
