VICTORY, needs cleanup before merge tho

--- a/views/index.html
+++ b/views/index.html
@@ -12,24 +12,7 @@
         <button class="btn btn-danger" ng-click='testGet()'>Test</button>
         <energy-graph></energy-graph>
         
-        <!-- <div class="row">
-        	<div class="col-lg-4 col-lg-offset-4">
-            <table class='table table-hover'>
-                <thead>
-                    <tr>
-                        <th class='text-left'>Time</th>
-                        <th class='text-center'>Consumption</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr ng-repeat="data in allData">
-                        <td class='text-left'>{{data.date}}</td>
-                        <td class='text-center'>{{data['NYC Office']}}</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-        </div> -->
+        <h5>{{timesOnScope}}</h5>
     
 
     </div>
