fixing bug with rect off screen

--- a/public/templates/energyGraph.html
+++ b/public/templates/energyGraph.html
@@ -5,8 +5,8 @@ svg {
 
 .line {
   fill: none;
-  stroke: #000;
-  stroke-width: 2.5px;
+  stroke: #4682B4;
+  stroke-width: 4px;
 }
 
 .axis path,
@@ -19,4 +19,3 @@ svg {
 </style>
 
 <div id='graphContainer'></div>
-<button class='btn btn-primary' ng-click='tick()'>Tick</button>
