--- a/views/index.html
+++ b/views/index.html
@@ -8,12 +8,8 @@
 <body ng-app='enertivDemo' ng-controller='MainCtrl'>
     <div class="container">
         <h1>BOOMSHAKALAKA</h1>
-        <button class="btn btn-warning" ng-click='populate()'>Populate</button>
-        <button class="btn btn-danger" ng-click='testGet()'>Test</button>
+        <!-- <button class="btn btn-warning" ng-click='populate()'>Populate</button> -->
         <energy-graph></energy-graph>
-        
-        <h5>{{timesOnScope}}</h5>
-    
 
     </div>
 </body>
