--- a/views/index.html
+++ b/views/index.html
@@ -3,17 +3,17 @@
 <head>
     <title>Enertiv Demo</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
 </head>
 
 <body ng-app='enertivDemo' ng-controller='MainCtrl'>
     <div class="container">
-        <h1>BOOMSHAKALAKA</h1>
+    	<div ng-cloak class="text-center"><h3>Energy Consumption for {{displayDate}}</h3></div>
         <!-- <button class="btn btn-warning" ng-click='populate()'>Populate</button> -->
         <energy-graph></energy-graph>
 
     </div>
 </body>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
 <script src='modules/d3/d3.min.js' charset='utf-8'></script>
 <script src='modules/angular-resource/angular-resource.min.js'></script>
 <script src='javascripts/app.js'></script>
