tooltip working, needs styling

--- a/public/templates/energyGraph.html
+++ b/public/templates/energyGraph.html
@@ -16,6 +16,15 @@ svg {
   shape-rendering: crispEdges;
 }
 
-</style>
+#tooltip {
+	opacity:0;
+	/*width:50px;*/
+	float: left;
+	position:absolute;
+	font: 12px sans-serif;
+	border: 1px solid red;
+}
 
+</style>
+<div id="tooltip">testing</div><!-- placeholder -->
 <div id='graphContainer'></div>
